Removed 'No Data' msg from cards without follower data. Fixed color variable linking to improve contrast of buttons. Changed line-height & padding for .mobile-artist-name.

--- a/frontend/styles/components/_artist-card.scss
+++ b/frontend/styles/components/_artist-card.scss
@@ -17,6 +17,9 @@ img.mobile-artist-image {
 .mobile-artist-name {
   font-size: 1.3em;
   font-weight: 400;
+  line-height: 1em;
+  padding-bottom: 0.15em;
+  padding-top: 0.15em;
 }
 
 .uk-card-default.artist-card {
