--- a/frontend/styles/components/_event.scss
+++ b/frontend/styles/components/_event.scss
@@ -44,7 +44,7 @@
 
 button.buy-tickets-btn {
   background-color: #f80046;
-  color: $color4;
+  color: $color6;
 }
 
 .header-section {
@@ -53,6 +53,6 @@ button.buy-tickets-btn {
 
 button.make-playlist-btn {
   background-color: #1fcf5f;
-  color: $color4;
+  color: $color6;
   border-radius: 25px;
 }
